# zed-websocket

./: .gitignore  Cargo.toml  README.md  client.js  index.html
derives/: Cargo.toml
derives/src/: lib.rs  listener.rs
src/: client.rs  event.rs  handler.rs  lib.rs  server.rs  service.rs
